[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://win_screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 1 )

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BtnVote" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.013
margin_left = -250.0
margin_top = 503.0
margin_right = 250.0
margin_bottom = -429.0
custom_fonts/font = SubResource( 2 )
text = "Vote for us <3"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.292
anchor_right = 0.5
anchor_bottom = 0.292
margin_left = -300.0
margin_top = -85.2231
margin_right = 300.0
margin_bottom = 75.7769
rect_pivot_offset = Vector2( 2.83545, -4.32874 )
custom_fonts/font = SubResource( 1 )
text = "You win,
congratulations"
align = 1
valign = 1

[node name="BtnMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.62
anchor_right = 0.5
anchor_bottom = 0.62
margin_left = -80.0
margin_top = -15.1777
margin_right = 80.0
margin_bottom = 26.8223
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="BtnExit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.62
anchor_right = 0.5
anchor_bottom = 0.62
margin_left = -80.0
margin_top = 36.5165
margin_right = 80.0
margin_bottom = 78.5165
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"
